<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:layout_margin="6dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">


    <ImageView
        android:id="@+id/product_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/pattern3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/product_image"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:maxLines="2"
            android:padding="10dp"
            android:shadowColor="@color/black"
            android:text="@string/product_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textStyle="bold" />



        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="10dp"
                android:shadowColor="@color/black"
                android:text="@string/_500_00"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/egp"
                android:textSize="13sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_edit_24"
                android:id="@+id/edit_product" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>